--- a/.gitmodules
+++ b/.gitmodules
@@ -8,4 +8,4 @@
 	url = https://github.com/dedmen/brofiler.git
 [submodule "tracy"]
 	path = tracy
-	url = https://bitbucket.org/wolfpld/tracy.git
+	url = https://bitbucket.org/dedmenmiller/tracy.git
