--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required (VERSION 3.13)
+#if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
+#	set (CMAKE_SYSTEM_VERSION 6.3 CACHE TYPE INTERNAL FORCE) #Force 8.1 SDK, to keep it compatible with win7
+#endif()
 project (ArmaScriptProfiler CXX ASM)
 
 find_package (Threads)
