Only try signing on windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -128,7 +128,7 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 endif()
 
 #Binary signing
-if(EXISTS "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/sign.bat")
+if(EXISTS "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/sign.bat" AND MSVC)
 	add_custom_command(TARGET ${INTERCEPT_PLUGIN_NAME}
 		POST_BUILD
 		COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/sign.bat
