--- a/src/ArmaScriptProfiler.vcxproj.filters
+++ b/src/ArmaScriptProfiler.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="SignalSlot.hpp">
       <Filter>Quelldateien</Filter>
     </ClInclude>
+    <ClInclude Include="FAllocHook.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="scriptProfiler.cpp">
@@ -270,6 +273,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="HookManager.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="FAllocHook.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
