Update for Arma v1.90

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ endif()
 project (ArmaScriptProfiler CXX ASM_MASM)
 find_package (Threads)
 
-option(USE_64BIT_BUILD "USE_64BIT_BUILD" OFF)
+set(USE_64BIT_BUILD ${CMAKE_CL_64})
 option(USE_STATIC_LINKING "USE_STATIC_LINKING" ON)
 option(WITH_BROFILER "WITH_BROFILER" OFF)
 option(WITH_CHROME "WITH_CHROME" OFF)
@@ -18,10 +18,7 @@ else()
 	set(INTERCEPT_LINK_TYPE "dynamic")
 endif()
 
-if(MSVC AND CMAKE_CL_64)
-	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++latest" )
-	set( USE_64BIT_BUILD ON)
-elseif(MSVC)
+if(MSVC)
 	set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /std:c++latest" )
 #elseif(MSVC)
 #	message(FATAL_ERROR "ERROR: You need a C++17 compatible compiler")
@@ -29,8 +26,6 @@ endif()
 
 message("GENERATOR USED: '${CMAKE_GENERATOR}'")
 message("COMPILER USED: '${CMAKE_CXX_COMPILER_ID}'")
-
-set(CMAKE_CL_64 ${USE_64BIT_BUILD})
 
 if(USE_64BIT_BUILD)
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/release/@ArmaScriptProfiler/intercept")
