--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,12 @@ cmake_minimum_required (VERSION 3.13)
 
 set(INTERCEPT_CLIENT_PATH "${CMAKE_SOURCE_DIR}/intercept/src/client")
 set(BROFILER_BASE_PATH "${CMAKE_SOURCE_DIR}/brofiler")
+set(LIB_BASE_PATH "${CMAKE_SOURCE_DIR}/lib")
 
 set(INTERCEPT_INCLUDE_PATH "${INTERCEPT_CLIENT_PATH}/headers" "${INTERCEPT_CLIENT_PATH}/headers/shared" "${INTERCEPT_CLIENT_PATH}/headers/client/" "${INTERCEPT_CLIENT_PATH}/headers/client/sqf")
 set(BROFILER_INCLUDE_PATH "${BROFILER_BASE_PATH}/BrofilerCore" "${BROFILER_BASE_PATH}/ThirdParty/TaskScheduler/Scheduler/Include")
 set(TRACY_INCLUDE_PATH "${CMAKE_SOURCE_DIR}/tracy")
-
+set(JSON_INCLUDE_PATH "${LIB_BASE_PATH}/json/single_include")
 
 if(USE_64BIT_BUILD)
     set(INTERCEPT_PLUGIN_NAME "ArmaScriptProfiler_x64")
@@ -70,6 +71,7 @@ add_library( ${INTERCEPT_PLUGIN_NAME} SHARED ${library_sources} ${INTERCEPT_SOUR
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${INTERCEPT_INCLUDE_PATH} )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${BROFILER_INCLUDE_PATH} )
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${TRACY_INCLUDE_PATH} )
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${JSON_INCLUDE_PATH} )
 
 target_link_libraries (${INTERCEPT_PLUGIN_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
